<resources>
    <string name="app_name">Biology Scheme Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="select_academic_years">Select academic years</string>
    <string name="select_class_name">Select class name</string>
    <string name="exit">Exit</string>
    <string name="next">Next</string>
    <string name="progression_sheet">Progression sheet</string>
    <string name="date_range">%1$s To %2$s</string>
    <string name="check_if_topic_has_been_taught">Check if topic has been taught</string>
    <string name="number_of_periods">Number of periods: %1$s</string>
    <string name="topic_details">Topic details</string>
    <string name="completed">Yes</string>
    <string name="not_completed">No</string>
    <string name="objectives">Objectives:</string>
    <string name="list_title">List title:</string>
    <string name="item_value">Replace with item value: %1$s</string>
    <string name="family_situation">Family of situation: %1$s</string>
    <string name="topic_status">Has topic been taught: %1$s</string>
    <string name="number_of_topic_programmed">Number of topic programmed:</string>
    <string name="number_of_topics_done">Number of topics done:</string>
    <string name="percentage_covered">Percentage covered:</string>
    <string name="hours_coverage_statistics">Hours coverage statistics</string>
    <string name="work_coverage_statistics">Work coverage statistics</string>
    <string name="number_of_hours_programmed">Number of hours programmed:</string>
    <string name="number_of_hours_done">Number of hours done:</string>
    <string name="ok">OK</string>
    <string name="topic">%1$s. %2$s</string>
    <string name="topic_title">Topic: %1$s</string>
    <string name="module">Module: %1$s</string>
    <string name="category_of_action">Category of action: %1$s</string>
    <string name="example_of_situation">Example of action: %1$s</string>
    <string name="progression_sheet_unavailable">Progession sheet unavailable</string>
</resources>