<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        style="@style/CustomCardStyle">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                android:text="@string/work_coverage_statistics"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_vertical"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
            <TextView
                android:id="@+id/tvNumberOfTopicProgrammed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                android:text="@string/number_of_topic_programmed"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvNumberOfTopicsDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                android:text="@string/number_of_topics_done"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvPercentageOfTopicsDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                android:text="@string/percentage_covered"
                android:gravity="center_vertical"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        style="@style/CustomCardStyle">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                android:text="@string/hours_coverage_statistics"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center_vertical"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                android:id="@+id/tvNumberOfHoursProgrammed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                android:text="@string/number_of_hours_programmed"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvNumberOfHoursDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                android:text="@string/number_of_hours_done"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/tvPercentageOfHoursDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                android:text="@string/percentage_covered"
                android:gravity="center_vertical"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>